<resources>
    <string name="app_name">swust_sports</string>

    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="back">退出</string>
    <string name="my_folder">提交反馈</string>
    <string name="my_photo">我的运动相册</string>
    <string name="my_favourite">关于我们</string>
    <string name="my_wallet">我的积分</string>
    <string name="add">添加</string>
    <string name="more">更多</string>
    <string name="get_more_about_member">我的运动等级</string>
    <string name="user_name">王征宇</string>
    <string name="email">这是我的邮箱，欢饮搞基</string>
</resources>
