<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_menu"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical"
    tools:showIn="@layout/activity_maininterface">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dip"
        android:id="@+id/ll_head"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <com.example.liqingfeng.swust_sports.View.CircleImageView
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_centerVertical="true"
                android:layout_margin="10dip"
                android:src="@drawable/hugh">

            </com.example.liqingfeng.swust_sports.View.CircleImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/user_name"
                android:textSize="28sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:text="我是西科大最帅的码农（后端码农）"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_head"
        android:orientation="vertical">
        <com.example.liqingfeng.swust_sports.View.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_crown"
            app:itemText="运动等级">

        </com.example.liqingfeng.swust_sports.View.MenuItemView>
        <com.example.liqingfeng.swust_sports.View.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_wallet"
            app:itemText="我的运动积分">

        </com.example.liqingfeng.swust_sports.View.MenuItemView>
        <com.example.liqingfeng.swust_sports.View.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_favourite"
            app:itemText="@string/my_favourite">

        </com.example.liqingfeng.swust_sports.View.MenuItemView>

        <com.example.liqingfeng.swust_sports.View.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_photo"
            app:itemText="@string/my_photo">

        </com.example.liqingfeng.swust_sports.View.MenuItemView>


        <com.example.liqingfeng.swust_sports.View.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_feedback"
            app:itemText="@string/my_folder">

        </com.example.liqingfeng.swust_sports.View.MenuItemView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/menu_item_setting"
            android:drawablePadding="5dip"
            android:gravity="center_vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip"
            android:text="@string/setting"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/menu_item_back"
            android:drawablePadding="5dip"
            android:gravity="center_vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

</RelativeLayout>
</android.support.constraint.ConstraintLayout>